# langchain_AIChef

./: .gitignore  README.md  pyproject.toml  test_diet_guard.py  test_guard_direct.py  test_guardrail.py
app/: main.py
app/agents/: app.py  lessons.py  router.py  tools.py
app/api/v1/: chat.py  oss.py
app/common/: image_utils.py  logger.py
app/models/: schemas.py
app/static/: app.js  index.html  style.css
evals/: __init__.py  config.py  dataset.py  metrics_custom.py  run_eval.py  trace.py
