[project]
name = "app2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "google-cloud-storage>=3.10.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-nvidia-ai-endpoints>=1.4.1",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langmem>=0.0.27",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
    "deepagents>=0.6.12",
    "markdown-it-py>=4.2.0",
]

[dependency-groups]
eval = [
    "ragas>=0.4.3",
]
